# ddr-score

./: LICENSE  Makefile.toml
app/: .env  .gitignore  Cargo.toml  Dockerfile
app/migrations/: 20250211162845_init.sql
app/src/: lib.rs
front/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
front/src/: App.tsx  Data.tsx  ScoreView.tsx  Stats.tsx  User.tsx
scraper/: package-lock.json  package.json  tsconfig.json
scraper/src/: bookmarklet.js  index.ts
terraform/: .gitignore  .terraform.lock.hcl  cloudfront.tf  ec2.tf  ecr.tf  efs.tf  lambda.tf  output.tf  provider.tf  route53.tf  s3.tf  vpc.tf
