[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
aws-config = { version = "1.5.16", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1.76.0", features = ["rt-tokio"] }
axum = { version = "0.8.1", features = ["json"] }
bcrypt = "0.17.0"
chrono = "0.4.39"
csv = "1.3.1"
flate2 = "1.0.35"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
sqlx = { version = "0.8.3", features = ["sqlite", "runtime-tokio-native-tls"] }
tokio = { version = "1.43.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["cors"] }
